2005-05-30 Philippe April <philippe@ilesansfil.org>
	* Show username in user_stats.php instead of user_id
	  and in other admin pages

2005-05-30 Francois Proulx <francois.proulx@gmail.com>
	* Changed language selectbox name so it does not clash with ISF's domain cookie
	* Fixed setlocale algorithm in Locale.php
	
2005-05-29 Francois Proulx <francois.proulx@gmail.com>
	* Missing null check in validate.php
	
2005-05-27 Francois Proulx <francois.proulx@gmail.com>
	* Changed the signup process to make it smoother for users
		* The user will automatically be granted the 15 minutes if he's signing up at a real hotspot
		* If the user closes his browser during the 15 minutes and loses its session, we will regenerate it
	* Added big red message to the top of the portal page, warning user to validate as soon as possible
	* Fixed translation typos

2005-05-26 Benoit Grégoire  <bock@step.polymtl.ca>
	* Someone moved the fallback gettext functions definition (for when gettext isn't installed) inside the static setCurrentLocale method, completely breaking the system when PHP doesn't have gettext support.  This is an untested fix.
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in auth.php to let users go through when the click twice on the login button
	* Fixed bug in hotspot_log.php
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Added "Get access statistics" button to Node admin to get hotspot specific stats
	* Added search box in Users log to get a specific user stats quickly
	
2005-05-24 Francois Proulx <francois.proulx@gmail.com>
	* Fixed typo in some translations
	* Cleaned-up todos
	
2005-05-18 Francois Proulx <francois.proulx@gmail.com>
	* Added strip_tags in RssPreview ( some malformed HTML would break the page layout )
	
2005-05-16 Francois Proulx <francois.proulx@gmail.com>
	* Changed login message in MainUI to make it clearer what the login button will do

2005-05-13 Philippe April <philippe@ilesansfil.org>