@@ -46,8 +46,8 @@ $tool_html .= '</ul>'."\n";
 
 $tool_html .= "<div class='pattern_language_credits'>";
 $tool_html .= _("Programming by Benoît Grégoire and François Proulx")."<p>";
-$tool_html .= _("French translation by TBD")."<p>";
-$tool_html .= _("With thanks to tobias v. van Veen & Michael Longford")."<p>";
+$tool_html .= _("French translation by Bernard Schutze")."<p>";
+$tool_html .= _("With thanks to tobias c. van Veen & Michael Longford")."<p>";
 $tool_html .= _("Pattern Language is a commission by the Locative Media Lab and the ")."<a href='http://www.mdcn.ca/'>Mobile Digital Commons Network</a>". (" with funding from the New Media Research Networks Fund at the Department of Canadian Heritage.")."<p>";
 $tool_html .= "<a href='http://www.katearmstrong.com/'>"._("Contact Kate Armstrong")."</a><p>";
 $tool_html .= "</div>";
@@ -92,7 +92,7 @@ if($current_user)
             if(!$pattern_language->isUserSubscribed($current_user))
             {
                 // Subscription
-                $body_html .= _("By clicking the link below you will subscribe to Pattern Language. Pattern Language will appear in the user subscribed content section at the bottom of portal pages. As you visit participating hotspots thoughout Montréal you will receive patterns that will create your unique narrative. You can always read other people's narrative using the archives.");
+                $body_html .= _("Subscribe to Pattern Language by clicking the link below. Once you have subscribed you will receive a fragment of text each time you log in to a participating hotspot in the city of Montreal. These text fragments will accumulate to form a unique narrative for every user. You can read your narrative anytime by clicking on \"Read Narrative\", or you can read the narratives generated by other users by going to \"Archives\".");
                 $body_html .= "<br><a href='subscription.php?subscribe=true&content_id={$pattern_language->getId()}'>"._("Subscribe now")."</a>";
             } 
             else
